WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 239507
REGRESSION (
249585@main
): TestWebKitAPI.IPCTestingAPI.CanReceiveIPCSemaphore is timing out
https://bugs.webkit.org/show_bug.cgi?id=239507
Summary
REGRESSION (249585@main): TestWebKitAPI.IPCTestingAPI.CanReceiveIPCSemaphore ...
Truitt Savell
Reported
2022-04-19 10:29:01 PDT
TestWebKitAPI.IPCTestingAPI.CanReceiveIPCSemaphore This test began timing out after the changes in
https://github.com/WebKit/WebKit/commit/df139fb58a6cf833efe7bc3d5e83e9b3e46cd486
History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.IPCTestingAPI.CanReceiveIPCSemaphore
Attachments
Patch
(13.07 KB, patch)
2022-04-22 04:38 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-04-19 10:29:33 PDT
<
rdar://problem/91970146
>
Kimmo Kinnunen
Comment 2
2022-04-22 04:38:30 PDT
Created
attachment 458136
[details]
Patch
EWS
Comment 3
2022-04-25 04:48:48 PDT
Committed
r293320
(
249943@main
): <
https://commits.webkit.org/249943@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458136
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug