REGRESSION (249585@main): TestWebKitAPI.IPCTestingAPI.CanReceiveIPCSemaphore is timing out https://bugs.webkit.org/show_bug.cgi?id=239507

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-04-25
Reviewed by Wenson Hsieh.

Source/WebKit:

Add purpose-built test interfaces for testing sending IPC::Semaphore via the IPC.

Test: ipc/send-semaphore.html

* Shared/IPCTester.cpp:
(WebKit::IPCTester::sendSameSemaphoreBack):
(WebKit::IPCTester::sendSemaphoreBackAndSignalProtocol):
* Shared/IPCTester.h:
* Shared/IPCTester.messages.in:

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/IPCTestingAPI.mm:
Move CanReceiveIPCSemaphore and CanSendIPCSemaphore test logic
to LayoutTests/ipc/send-semaphore.html
The tests were using audio and canvas implementation detail
messages to test that IPC system can send IPC::Semaphore via IPC.
Canvas implementation details changed and the test started
to fail.

The new tests use IPC messages that are purpose-built to test this
feature. The new tests also actually test that the sent semaphores
work.

LayoutTests:

* ipc/send-semaphore-expected.txt: Added.
* ipc/send-semaphore.html: Added.

Canonical link: https://commits.webkit.org/249943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293320 268f45cc-cd09-0410-ab3c-d52691b4dbfc