Tools/TestWebKitAPI/Tests/WebKitCocoa/IPCTestingAPI.mm
@@ -286,46 +286,7 @@ TEST(IPCTestingAPI, CanSendInvalidAsyncMessageToGPUProcessWithoutTermination)
     EXPECT_FALSE([webView stringByEvaluatingJavaScript:@"result.arguments[0].value"].boolValue);
 }
 
-TEST(IPCTestingAPI, CanReceiveIPCSemaphore)
-{
-    auto webView = createWebViewWithIPCTestingAPI();
-
-    auto delegate = adoptNS([[IPCTestingAPIDelegate alloc] init]);
-    [webView setUIDelegate:delegate.get()];
-
-    done = false;
-    auto html = @"<!DOCTYPE html>"
-        "<script>"
-        "const bufferSize = 1 << 16;"
-        "const streamConnection = IPC.createStreamClientConnection('GPU', bufferSize);"
-        "IPC.sendMessage('GPU', 0, IPC.messages.GPUConnectionToWebProcess_CreateRenderingBackend.name, ["
-        "    { type: 'RemoteRenderingBackendCreationParameters', 'identifier': 123, 'pageProxyID': IPC.webPageProxyID, 'pageID': IPC.pageID },"
-        "    { type: 'StreamConnectionBuffer', value: streamConnection.streamBuffer() },"
-        "]);"
-        "const arguments = IPC.waitForMessage('GPU', 123, IPC.messages.RemoteRenderingBackendProxy_DidCreateWakeUpSemaphoreForDisplayListStream.name, 100);"
-        "alert(arguments.length + ':' + arguments[0].type + ':' + arguments[0].value.waitFor(100));"
-        "</script>";
-    [webView synchronouslyLoadHTMLString:html];
-    TestWebKitAPI::Util::run(&done);
-
-    EXPECT_STREQ([alertMessage UTF8String], "1:Semaphore:false");
-}
-
 #endif // ENABLE(GPU_PROCESS)
-
-TEST(IPCTestingAPI, CanCreateIPCSemaphore)
-{
-    auto webView = createWebViewWithIPCTestingAPI();
-
-    auto delegate = adoptNS([[IPCTestingAPIDelegate alloc] init]);
-    [webView setUIDelegate:delegate.get()];
-
-    done = false;
-    [webView synchronouslyLoadHTMLString:@"<!DOCTYPE html><script>alert(IPC.createSemaphore().waitFor(100));</script>"];
-    TestWebKitAPI::Util::run(&done);
-
-    EXPECT_FALSE([alertMessage boolValue]);
-}
 
 TEST(IPCTestingAPI, CanCreateSharedMemory)
 {
@@ -344,36 +305,6 @@ TEST(IPCTestingAPI, CanCreateSharedMemory)
     EXPECT_STREQ([webView stringByEvaluatingJavaScript:@"Array.from(new Int8Array(sharedMemory.readBytes(1, 3))).toString()"].UTF8String, "2,4,8");
     EXPECT_EQ([webView stringByEvaluatingJavaScript:@"sharedMemory.writeBytes(new Int8Array([101, 102, 103, 104, 105, 106]), 2, 3)"].intValue, 0);
     EXPECT_STREQ([webView stringByEvaluatingJavaScript:@"Array.from(new Int8Array(sharedMemory.readBytes())).toString()"].UTF8String, "1,2,101,102,103,32,0,0");
-}
-
-TEST(IPCTestingAPI, CanSendSemaphore)
-{
-    auto webView = createWebViewWithIPCTestingAPI();
-
-    auto delegate = adoptNS([[IPCTestingAPIDelegate alloc] init]);
-    [webView setUIDelegate:delegate.get()];
-
-    auto* html = @R"HTML(<!DOCTYPE html>
-<body>
-<script>
-const audioContext = new AudioContext;
-const destination = audioContext.createMediaStreamDestination();
-const semaphore = IPC.createSemaphore();
-const result = IPC.sendSyncMessage('GPU', 0, IPC.messages.RemoteAudioDestinationManager_CreateAudioDestination.name, 100,
-    [{type: 'String', value: 'some device'},
-    {type: 'uint32_t', value: destination.numberOfInputs},
-    {type: 'uint32_t', value: destination.channelCount},
-    {type: 'float', value: audioContext.sampleRate}, {type: 'float', value: audioContext.sampleRate},
-    {type: 'Semaphore', value: semaphore}]);
-alert(result.arguments[0].type);
-</script>
-</body>)HTML";
-
-    done = false;
-    [webView synchronouslyLoadHTMLString:html];
-    TestWebKitAPI::Util::run(&done);
-
-    EXPECT_STREQ([alertMessage UTF8String], "uint64_t");
 }
 
 #if PLATFORM(COCOA)
